2010-09-30  Andreas Kupries  <andreask@activestate.com>

	* example/autopasswd: Updated to use tclsh in PATH, and 'package
	* example/chess.exp: require Expect'. Obsoletes fixline1.
	* example/cryptdir:
	* example/decryptdir:
	* example/dislocate:
	* example/dvorak:
	* example/ftp-inband:
	* example/ftp-rfc:
	* example/gethostbyaddr:
	* example/kibitz:
	* example/lpunlock:
	* example/mkpasswd:
	* example/multixterm:
	* example/passmass:
	* example/read1char:
	* example/rftp:
	* example/rlogin-cwd:
	* example/robohunt:
	* example/rogue.exp:
	* example/telnet-cwd:
	* example/timed-read:
	* example/timed-run:
	* example/unbuffer:
	* example/virterm:
	* example/weather:
	* example/xkibitz:
	* example/xpstat:

	* Makefile.in: Continued work on the 'make dist' target (config.{sub,guess})
	* install.sh: Removed unused file.
	* mkinstalldirs: Removed unused file.
	* tclconfig/README.txt: Removed unused file.
	* testsuite/config/: Removed contents of unused directory.
	* test/.Sanitize: Removed unused file.

2010-09-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: improved make dist target to include the necessary
	files, and remove old dist_orig.
	Enable Makefile regen target

2010-09-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure: regen with ac-2.59
	* tclconfig/tcl.m4: update for correct LDFLAGS on HP-UX
	* Makefile.in (expect): use TEA LDFLAGS instead of tclConfig.sh to
	build expect executable

2010-09-01  Andreas Kupries  <andreask@activestate.com>

	* Makefile.in: [Bug 865278] Semi-applied Don Porter's patch adding
	code which prevents the package from registering with Tcl
	interpreters which cannot load it, i.e. below the version it was
	compiled against. Semi because the pkgIndex.in in his patch is
	not used, the pkgIndex.tcl is generated by the Makefile(.in).
	* pkgIndex.in: Removed. File not used.

2010-08-31  Andreas Kupries <andreask@activestate.com>

	* Various cleanups, local patches of ActiveState.